--- a/review-0/report.tex
+++ b/review-0/report.tex
@@ -12,10 +12,10 @@
 \ptitle{Sample-Efficiency in Complex Environments using Reinforcement Learning}
 \setnauthors{3}
 \setauthorone{Nimish S}{312217104098}
-\setauthortwo{*****}{312217104***}
-\setauthorthree{*****}{312217104***}
+\setauthortwo{Sadhana Smruthi S}{312217104134}
+\setauthorthree{Avi K Natesan}{312217104022}
 \semester{7}
-\guide{*****}
+\guide{Dr. R Priyadarshini}
 \review{0}
 \reviewdate{24 October 2020}
 \reviewtitle
@@ -165,6 +165,19 @@ in the near future. HER was also tested on a physical fetch robot without fine-t
 and performed well on the pick-and-place task.
 
 \section{Proposed System}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.60]{review-0-architecture.png}
+  \caption{Proposed System Architecture}
+  \label{fig:proposed-system}
+\end{figure}
+
+The proposed system is a Curiosity-Driven Off-Policy agent which includes a modified version
+of the ICM \textit{(Intrinsic Curiosity Module)} called the Simplified-ICM \cite{cdl2} coupled with a 
+DQN based off-policy learner. The system is aimed at creating a sample-efficient method to train an agent to
+navigate complex environments.
+
 The environment to conduct the experiment in is 2D SuperMarioBros environment which 
 has a continuous, non-repetitve state space in the form of pixel data with an 
 extremely sparse reward system. The objective in this environment is to navigate to the 
@@ -172,19 +185,19 @@ end of the level while avoiding all obstacles. The complexity of this environmen
 to the fact that in a single level, a state will never occur more than once due to the
 uni-directional nature of the level. This environment will be used as a baseline for comparison
 with a much more complex 3D environment called MineRL with hierarchial tasks where the 
-goal is to craft specific resources by gathering raw materials from the environment.
+goal is to craft specific resources by gathering raw materials from the environment. The choice of the agent, 
+DDDQN \textit{(Dueling Double Deep Q-Network)} \cite{duel}\cite{double} or DQfD \textit{(Deep Q-Learning from Demonstrations)} 
+depends on the environment.
 
-The proposed system is a Curiosity-Driven Off-Policy agent which includes a modified version
-of the ICM \textit{(Intrinsic Curiosity Module)} called the Simplified-ICM \cite{cdl2} coupled with an 
-off policy learner like DDDQN \textit{(Dueling Double Deep Q-Network)} or DQfD
-\textit{(Deep Q-Learning from Demonstrations)} depending on the environment.
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[scale=0.65]{review-0-architecture.png}
-  \caption{Proposed System Architecture}
-  \label{fig:proposed-system}
-\end{figure}
+The agent initially observes the state $s$ of the environment and performs an action $a$ 
+for which the environment returns a new state $s'$ and an extrinsic reward $r^e$. This experiences
+tuple consisting of a state, action, reward and next state  $(s, a, r^e, s')$ is stored in a 
+replay buffer which is a store for experience tuples. Independantly, the buffer is sampled 
+by the S-ICM and it generates an intrinsic reward signal $r^i$ which is combined with 
+the extrinsic reward and given to the agent to perform the TD \textit{(temporal difference)} update.
+Based on this newly constructed reward signal, the TD update is performed. With these newly calculated
+estimates, the agent will start to explore previously unseen states and find better 
+solutions to the environment.
 
 
 \begin{thebibliography}{99}
@@ -218,9 +231,18 @@ off policy learner like DDDQN \textit{(Dueling Double Deep Q-Network)} or DQfD
   {\em Hindsight Experience Replay.}
   Advances in Neural Information Processing Systems 30 (NIPS) (2017).
 
-  \bibitem[8]{cdl2}B. Li, T. Lu, J. Li, N. Lu, Y. Cai and S. Wang, 
+  \bibitem[8]{cdl2} B. Li, T. Lu, J. Li, N. Lu, Y. Cai and S. Wang, 
   {\em Curiosity-Driven Exploration for Off-Policy Reinforcement Learning Methods.}
   IEEE International Conference on Robotics and Biomimetics (ROBIO) (2019)
+
+  \bibitem[9]{duel} Hasselt, H., Guez, A. and Silver, D., 
+  {\em Dueling Network Architectures for Deep Reinforcement Learning.}
+  ArXiv (2015).
+
+  \bibitem[10]{double} Wang, Z., Freitas, N. and Lanctot, M. 
+  {\em Deep Reinforcement Learning with Double Q-learning.}
+  ArXiv (2015).
+
 \end{thebibliography}
 	
 \end{document}
